Fix desktop blurriness from css transform [skip ci]

--- a/backend/static/css/auth.css
+++ b/backend/static/css/auth.css
@@ -44,7 +44,7 @@ table input {
 }
 
 #center-div {
-    width: 50%;
+    width: 50vw;
     max-width: 600px;
 }
 
